syntax = "proto3";

option java_multiple_files = true;
option java_package = "drones.proto";

import "google/protobuf/empty.proto";

package drones;

// gRPC definition for DroneService

service DroneService {
    rpc ReportLocation (ReportLocationRequest) returns (google.protobuf.Empty) {}
}


message ReportLocationRequest {
    string drone_id = 1;
    double longitude = 2;
    double latitude = 3;
    double altitude = 4;
}